--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
+    color: transparent;
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: none;
@@ -29,30 +30,20 @@
     -ms-animation: imageAnimation 36s linear infinite 0s;
     animation: imageAnimation 36s linear infinite 0s;
 }
-.cb-slideshow li div {
-    z-index: 1000;
-    position: absolute;
-    bottom: 30px;
-    left: 0px;
-    width: 100%;
-    text-align: center;
-    opacity: 0;
-    -webkit-animation: titleAnimation 36s linear infinite 0s;
-    -moz-animation: titleAnimation 36s linear infinite 0s;
-    -o-animation: titleAnimation 36s linear infinite 0s;
-    -ms-animation: titleAnimation 36s linear infinite 0s;
-    animation: titleAnimation 36s linear infinite 0s;
-}
-.cb-slideshow li div h3 {
-    font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
+.coming-soon{
+	z-index:1000;
+	position:absolute;
+	bottom:20%;
+	left:25%;	
+    font-family: 'BebasNeueRegular', 'Arial Narrow', sans-serif;
     font-size: 160px;
-    padding: 0 30px;
+    padding: 0 45% 100px 100px;
     line-height: 120px;
-    color: rgba(255,255,255,0.8);
+    color: rgba(169,3,41, 0.8);
 }
-.cb-slideshow li:nth-child(1) span { background-image: url(../images/1.jpg) }
+.cb-slideshow li:nth-child(1) span { background-image: url(../images/6.jpg) }
 .cb-slideshow li:nth-child(2) span {
-    background-image: url(../images/2.jpg);
+    background-image: url(../images/5.jpg);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -60,7 +51,7 @@
     animation-delay: 6s;
 }
 .cb-slideshow li:nth-child(3) span {
-    background-image: url(../images/3.jpg);
+    background-image: url(../images/4.jpg);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -68,7 +59,7 @@
     animation-delay: 12s;
 }
 .cb-slideshow li:nth-child(4) span {
-    background-image: url(../images/4.jpg);
+    background-image: url(../images/3.jpg);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
@@ -76,7 +67,7 @@
     animation-delay: 18s;
 }
 .cb-slideshow li:nth-child(5) span {
-    background-image: url(../images/5.jpg);
+    background-image: url(../images/2.jpg);
     -webkit-animation-delay: 24s;
     -moz-animation-delay: 24s;
     -o-animation-delay: 24s;
@@ -84,7 +75,7 @@
     animation-delay: 24s;
 }
 .cb-slideshow li:nth-child(6) span {
-    background-image: url(../images/6.jpg);
+    background-image: url(../images/1.jpg);
     -webkit-animation-delay: 30s;
     -moz-animation-delay: 30s;
     -o-animation-delay: 30s;
@@ -138,15 +129,11 @@
 	}
 	17% {
 	    opacity: 1;
-	    -webkit-transform: scale(1.1);
-	}
-	22% {
-		opacity: 0;
-		-webkit-transform: scale(1.1) translateY(-20%);
+	    -webkit-transform: scale(1.1) rotate(3deg);
 	}
 	25% {
 	    opacity: 0;
-	    -webkit-transform: scale(1.1) translateY(-100%);
+	    -webkit-transform: scale(1.1) rotate(3deg);
 	}
 	100% { opacity: 0 }
 }
@@ -162,15 +149,11 @@
 	}
 	17% {
 	    opacity: 1;
-	    -moz-transform: scale(1.1);
-	}
-	22% {
-		opacity: 0;
-		-webkit-transform: scale(1.1) translateY(-20%);
+	    -moz-transform: scale(1.1) rotate(3deg);
 	}
 	25% {
 	    opacity: 0;
-	    -moz-transform: scale(1.1) translateY(-100%);
+	    -moz-transform: scale(1.1) rotate(3deg);
 	}
 	100% { opacity: 0 }
 }
@@ -186,15 +169,11 @@
 	}
 	17% {
 	    opacity: 1;
-	    -o-transform: scale(1.1);
-	}
-	22% {
-		opacity: 0;
-		-webkit-transform: scale(1.1) translateY(-20%);
+	    -o-transform: scale(1.1) rotate(3deg);
 	}
 	25% {
 	    opacity: 0;
-	    -o-transform: scale(1.1) translateY(-100%);
+	    -o-transform: scale(1.1) rotate(3deg);
 	}
 	100% { opacity: 0 }
 }
@@ -210,15 +189,11 @@
 	}
 	17% {
 	    opacity: 1;
-	    -ms-transform: scale(1.1);
-	}
-	22% {
-		opacity: 0;
-		-webkit-transform: scale(1.1) translateY(-20%);
+	    -ms-transform: scale(1.1) rotate(3deg);
 	}
 	25% {
 	    opacity: 0;
-	    -ms-transform: scale(1.1) translateY(-100%);
+	    -ms-transform: scale(1.1) rotate(3deg);
 	}
 	100% { opacity: 0 }
 }
@@ -234,118 +209,15 @@
 	}
 	17% {
 	    opacity: 1;
-	    transform: scale(1.1);
-	}
-	22% {
-		opacity: 0;
-		-webkit-transform: scale(1.1) translateY(-20%);
+	    transform: scale(1.1) rotate(3deg);
 	}
 	25% {
 	    opacity: 0;
-	    -transform: scale(1.1) translateY(-100%);
+	    transform: scale(1.1) rotate(3deg);
 	}
 	100% { opacity: 0 }
 }
-@-webkit-keyframes titleAnimation { 
-	0% {
-	    opacity: 0;
-	    -webkit-transform: translateY(-300%);
-	}
-	8% {
-	    opacity: 1;
-	    -webkit-transform: translateY(0%);
-	}
-	17% {
-	    opacity: 1;
-	    -webkit-transform: translateY(0%);
-	}
-	19% {
-	    opacity: 0;
-	    -webkit-transform: translateY(100%);
-	}
-	25% { opacity: 0 }
-	100% { opacity: 0 }
-}
-@-moz-keyframes titleAnimation { 
-	0% {
-	    opacity: 0;
-	    -moz-transform: translateY(-300%);
-	}
-	8% {
-	    opacity: 1;
-	    -moz-transform: translateY(0%);
-	}
-	17% {
-	    opacity: 1;
-	    -moz-transform: translateY(0%);
-	}
-	19% {
-	    opacity: 0;
-	    -moz-transform: translateY(100%);
-	}
-	25% { opacity: 0 }
-	100% { opacity: 0 }
-}
-@-o-keyframes titleAnimation { 
-	0% {
-	    opacity: 0;
-	    -o-transform: translateY(-300%);
-	}
-	8% {
-	    opacity: 1;
-	    -o-transform: translateY(0%);
-	}
-	17% {
-	    opacity: 1;
-	    -o-transform: translateY(0%);
-	}
-	19% {
-	    opacity: 0;
-	    -o-transform: translateY(100%);
-	}
-	25% { opacity: 0 }
-	100% { opacity: 0 }
-}
-@-ms-keyframes titleAnimation { 
-	0% {
-	    opacity: 0;
-	    -ms-transform: translateY(-300%);
-	}
-	8% {
-	    opacity: 1;
-	    -ms-transform: translateY(0%);
-	}
-	17% {
-	    opacity: 1;
-	    -ms-transform: translateY(0%);
-	}
-	19% {
-	    opacity: 0;
-	    -ms-transform: translateY(100%);
-	}
-	25% { opacity: 0 }
-	100% { opacity: 0 }
-}
-@keyframes titleAnimation { 
-	0% {
-	    opacity: 0;
-	    transform: translateY(-300%);
-	}
-	8% {
-	    opacity: 1;
-	    transform: translateY(0%);
-	}
-	17% {
-	    opacity: 1;
-	    transform: translateY(0%);
-	}
-	19% {
-	    opacity: 0;
-	    transform: translateY(100%);
-	}
-	25% { opacity: 0 }
-	100% { opacity: 0 }
-}
+
 /* Show at least something when animations not supported */
 .no-cssanimations .cb-slideshow li span{
 	opacity: 1;
