--- a/css/demo.css
+++ b/css/demo.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'BebasNeueRegular';
+    font-family: 'Pacifico','BebasNeueRegular', cursive;
     src: url('fonts/BebasNeue-webfont.eot');
     src: url('fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
          url('fonts/BebasNeue-webfont.woff') format('woff'),
