--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 .coming-soon{
 	z-index:1000;
-	position:relative;
-	bottom:35%;
-	left:20%;	
-    font-family:'Pacifico','BebasNeueRegular', 'Arial Narrow', sans-serif;
+	position: absolute;
+    left: 0;
+    top: 20%;
+    width: 100%;
+    text-align: center;
+    font-family:'Monoton','Pacifico','BebasNeueRegular', 'Arial Narrow', sans-serif;
     font-size: 100px;
-    padding: 20% 10% 50px 30px;
+    padding: 20px 20px 20px 20px;
     line-height: 120px;
-    color: rgbargba(59, 252, 29, 0.8);
+    color: rgba(80, 200, 117, 0.8);
 }
 .cb-slideshow,
 .cb-slideshow:after {
