--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+h3#eme{
+	
+    font-family:'Pacifico','BebasNeueRegular', 'Arial Narrow', sans-serif;
+    font-size: 110px;
+}
+h3#soon{
+	font-family:'"Allerta Stencil','BebasNeueRegular', 'Arial Narrow', sans-serif;
+    font-size: 90px;
+}
 .coming-soon{
 	z-index:1000;
 	position: absolute;
@@ -5,11 +14,11 @@
     top: 20%;
     width: 100%;
     text-align: center;
-    font-family:'Monoton','Pacifico','BebasNeueRegular', 'Arial Narrow', sans-serif;
+    font-family:'Pacifico','BebasNeueRegular', 'Arial Narrow', sans-serif;
     font-size: 100px;
     padding: 20px 20px 20px 20px;
     line-height: 120px;
-    color: rgba(80, 200, 117, 0.8);
+    color: rgba(255, 255, 255, 0.8);
 }
 .cb-slideshow,
 .cb-slideshow:after {
