--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,34 @@
+.social {
+  position: absolute;
+    left: 0;
+    bottom:20%;
+    width: 100%;
+    text-align: center;
+  display: inline-flex;
+  justify-content: center;
+}
+.social i {
+  padding: 10px;
+  text-shadow: 0px 6px 8px rgba(0, 0, 0, 0.6);
+  transition: all ease-in-out 150ms;
+}
+.social a:nth-child(1) {
+  color: #dd4b39;
+}
+.soical a:nth-child(2) {
+  color: #4867AA;
+}
+.social a:nth-child(3) {
+  color: #1DA1F2;
+}
+.social i:hover {
+  margin-top: -3px;
+  text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
+}
+
+
+
 h3#eme{
-	
     font-family:'Pacifico','BebasNeueRegular', 'Arial Narrow', sans-serif;
     font-size: 110px;
 }
