--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 .social a:nth-child(1) {
   color: #dd4b39;
 }
-.soical a:nth-child(2) {
+.social a:nth-child(2) {
   color: #4867AA;
 }
 .social a:nth-child(3) {
