--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .social {
   position: absolute;
-    font-size:25px;
+    font-size:5vh;
     bottom:20%;
     width: 100%;
     text-align: center;
