--- a/static/frontend/assets/css/material-kit.css
+++ b/static/frontend/assets/css/material-kit.css
@@ -2994,7 +2994,7 @@ fieldset[disabled] .navbar .btn-link:focus {
 
 .navbar, .navbar.navbar-default {
     background-color: #C9B1D2;
-    opacity: .7;
+    opacity: 1;
     color: #555555;
     box-shadow: 0 4px 18px 0px rgba(0, 0, 0, 0.12), 0 7px 10px -5px rgba(0, 0, 0, 0.15);
 }
@@ -4556,7 +4556,7 @@ h2.title {
     padding-top: 40px;
     padding-bottom: 40px;
     margin: 0 auto;
-	width:850px;
+	width:65vw;
 }
 
 
